--- a/index.html
+++ b/index.html
@@ -6,21 +6,53 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="styles.css">
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
+  </style> 
   
   <title>Frontend Mentor | Fylo data storage component</title>
 </head>
 <body>
 
-  You’ve used 815 GB of your storage
-
-  185 GB Left
-  
-  0 GB
-  1000 GB
-  
-  <div class="attribution">
+  <div class="wrapper">
+    <main class="cards">
+      <section class = "card card--left">
+        <header>
+          <img src="images/logo.svg" alt="Fylo Logo">
+        </header>
+        <ul class="buttons">
+          <li>
+            <button class="button"><img src="images/icon-document.svg" alt="Document"></button>
+          </li>
+          <li >
+            <button class="button"><img src="images/icon-folder.svg" alt="Folder"></button>
+          </li>
+          <li>
+            <button class="button"><img src="images/icon-upload.svg" alt="Upload"></button>
+          </li>
+        </ul>
+      </section>
+      <section class="card card--right">
+        <p>You've used <strong>815 GB</strong> of your storage</p>
+        <div class="storage-information">
+          <div class="storage-bar">
+            <div class="inner-storage-bar"></div>
+          </div>
+          <p class="storage-label">0 GB</p>
+          <p class="storage-label">1000 GB</p>
+        </div>
+        <div class="notification">
+          <div class="notification-text">
+            <strong class = "amt">185</strong><span>gb left</span>
+            <div class="desktop triangle"></div>
+          </div>
+        </div>
+      </section>
+    </main>
+  </div> 
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    Coded by <a href="https://github.com/CrazedDoggo">Crazed Doggo</a>.
+  </footer>
 </body>
 </html>
